# posture

./: .gitignore  .gitmodules  CMakeLists.txt  README_zh.md
.github/workflows/: check-build-apps.yml  release.yml
apps/games/lvgl_games/: CMakeLists.txt  README.md  app_default.config
apps/games/lvgl_games/src/: lv_games.c  lv_games.h  sy_black.c
apps/games/lvgl_games/src/game2048/: lv_2048.c  lv_2048.h
apps/games/lvgl_games/src/huarongdao/: exit_img.c  huaorngdao.h  huarongdao.c  next_img.c  pre_img.c
apps/games/lvgl_games/src/pvz/: car_zb_img.c  cherry_boom_img.c  cherry_img.c  dici_btn_img.c  dici_img.c  game_over_img.c  hedan_btn_img.c  huoyan_img.c  jiguangdou_btn_img.c  jiguangdou_img.c  jiguangkou_img.c  jump_zb.c  lajiao_btn_img.c  lajiao_img.c  little_car_img.c  nuclear_boom_img.c  nuclear_img.c  pvz.c  pvz.h  qiqiu_zb_img.c  start_game_img.c  sun_btn_img.c  sun_img.c  sunshine.c  wandou_btn_img.c  wandou_img.c  wave_zb_come_img.c  wogua_btn_img.c  wogua_dead_img.c  wogua_img.c  yingtao_btn_img.c  zb1.c  zidan_split_img.c
apps/games/lvgl_games/src/xiaoxiaole/: coin_img.c  refs_btn_img.c  xiaoxaiole.c  xiaoxiaole.h
apps/games/lvgl_games/src/yang/: bottom_dock_img.c  grass1_img.c  grass2_img.c  yang.c  yang.h  yang_bg_img.c  yang_card10_img.c  yang_card11_img.c  yang_card12_img.c  yang_card13_img.c  yang_card14_img.c  yang_card15_img.c  yang_card1_img.c  yang_card2_img.c  yang_card3_img.c  yang_card4_img.c  yang_card5_img.c  yang_card6_img.c  yang_card7_img.c  yang_card8_img.c  yang_card9_img.c  yang_start_btn_img.c
apps/micropython/mpy_minimal/: CMakeLists.txt
apps/tuya.ai/duo_eye_mood/: Kconfig
apps/tuya.ai/your_chat_bot/: CMakeLists.txt  Kconfig
apps/tuya.ai/your_chat_bot/src/display2/ui_chatbot/: CMakeLists.txt
apps/tuya.ai/your_chat_bot/src/display2/ui_chatbot/screens/: ui_home.c  ui_home.h
apps/tuya.ai/your_desk_emoji/: Kconfig  RAEDME_zh.md  README.md
apps/tuya.ai/your_otto_robot/: README.md
apps/tuya.ai/your_serial_chat_bot/: CMakeLists.txt  Kconfig  RAEDME_zh.md  README.md
apps/tuya.ai/your_serial_chat_bot/config/: TUYA_T5AI_BOARD_LCD_3.5.config  TUYA_T5AI_CORE.config  WAVESHARE_ESP32S3_TOUCH_AMOLED_1_8.config  XINGZHI_ESP32S3_Cube_0_96OLED_WIFI.config
apps/tuya.ai/your_serial_chat_bot/include/: tuya_config.h
apps/tuya.ai/your_serial_chat_bot/src/: app_chat_bot.c  tuya_main.c
archiveMediapipe/: postureDiagonal.ipynb  postureDiagonal2.ipynb  postureFrontCamera.ipynb
archiveMoveNet/: postureAnnotated.ipynb  postureMoveNet.ipynb  postureNeck.ipynb  postureTensorflow.ipynb
boards/ESP32/: TKL_Kconfig
boards/ESP32/DNESP32S3_BOX2_WIFI/: dnesp32s3_box2_wifi.c
platform/: platform_config.yaml
platform/T5AI/: build_example.py
posture-dev/: .gitignore  ARCHITECTURE.md  CHANGES_SUMMARY.md  CMakeLists.txt  Kconfig  QUEUE_ARCHITECTURE.md  app_default.config  get_ops.py  inspect_model.py
posture-dev/ai/inference/: ai_classifier.c  ai_classifier.h
posture-dev/ai/train/: dataset.csv  dataset_old.csv  test_infer.py  train_export.py
posture-dev/include/: ancs.h  ancs_client.h  ble_central_port.h  ble_comm.h  ble_peripheral_port.h  camera.h  display_popup.h  example_display.h  inference.h  posture_detect.h  queue_types.h  tuya_ble_ancs_cfg.h  ui_lvgl.h
posture-dev/src/: ancs.c  ancs_client.c  ble_central_port.c  ble_comm.c  ble_peripheral_port.c  camera.c  display_popup.c  example_display.c  inference.c  inference.cpp  linker_stubs.cpp  main.c  main.cpp  posture_detect.cpp  tflm_debug_log.cpp  ui_lvgl.c
src/: Kconfig
src/micropython/: .gitignore  CMakeLists.txt  Kconfig  copy_micropython_source.sh  mpy_prepare.cmake
src/micropython/cmake/: extract_modules.py  extract_pattern.cmake  extract_qstr.cmake  process_qstr.cmake
src/micropython/doc/: MicroPython_T5AI_移植里程碑计划.md  MicroPython编译系统详解.md  QSTR生成实现说明.md  TuyaOpen_T5AI编译系统说明.md
src/micropython/include/: micropython.h
src/micropython/mpy/: README.md
src/micropython/mpy/extmod/: modplatform.h  virtpin.h
src/micropython/port/t5ai/: main.c  mpconfigport.h  mphalport.c  mphalport.h  port_misc.c  qstrdefsport.h
src/peripherals/imu/: CMakeLists.txt  Kconfig
src/peripherals/imu/bmi270/: bmi270.c  bmi270_common.h
src/tal_driver/: CMakeLists.txt
src/tal_driver/dma2d/: tal_dma2d.c  tal_dma2d.h
src/tuya_ai_service/: CMakeLists.txt  Kconfig
src/tuya_ai_service/port/include/: base_event.h  base_event_info.h  gw_intf.h  http_inf.h  http_manager.h  httpc.h  mqc_app.h  smart_frame.h  tuya_ai_types.h  tuya_devos_utils.h  tuya_lan_sock.h  tuya_svc_devos.h  tuya_svc_netmgr.h  tuya_svc_netmgr_linkage.h  ty_cJSON.h  uni_base64.h  uni_log.h
src/tuya_ai_service/port/src/: gw_intf.c  http_inf.c  http_manager.c  http_port_internal.h  httpc.c  mqc_app.c  smart_frame.c  tuya_devos_utils.c  tuya_svc_devos.c  tuya_svc_netmgr.c  tuya_svc_netmgr_linkage.c
src/tuya_ai_service/svc_ai_agent/: Kconfig
src/tuya_ai_service/svc_ai_agent/include/: tuya_ai_agent.h  tuya_ai_input.h  tuya_ai_output.h
src/tuya_ai_service/svc_ai_agent/src/: tuya_ai_agent.c  tuya_ai_input.c  tuya_ai_internal.h  tuya_ai_output.c
src/tuya_ai_service/svc_ai_basic/: Kconfig
src/tuya_ai_service/svc_ai_basic/include/: tuya_ai_biz.h  tuya_ai_client.h  tuya_ai_event.h  tuya_ai_http.h  tuya_ai_mqtt.h  tuya_ai_protocol.h
src/tuya_ai_service/svc_ai_basic/src/: tuya_ai_biz.c  tuya_ai_client.c  tuya_ai_event.c  tuya_ai_http.c  tuya_ai_mqtt.c  tuya_ai_private.h  tuya_ai_protocol.c
src/tuya_ai_service/svc_ai_codec/: Kconfig
src/tuya_ai_service/svc_ai_codec/include/: tuya_ai_encoder.h  tuya_ai_encoder_opus.h  tuya_ai_encoder_opus_ipc.h  tuya_ai_encoder_opus_ipc_server.h  tuya_ai_encoder_speex.h
src/tuya_ai_service/svc_ai_codec/src/: tuya_ai_encoder.c  tuya_ai_encoder_opus.c  tuya_ai_encoder_opus_ipc.c  tuya_ai_encoder_opus_ipc_server.c  tuya_ai_encoder_speex.c
src/tuya_ai_service/svc_ai_monitor/include/: tuya_ai_monitor.h
src/tuya_ai_service/svc_ai_monitor/src/: tuya_ai_monitor.c
src/tuya_ai_service/wukong/: wukong_ai_mcp_server.c  wukong_ai_mcp_server.h
tools/cli_command/: cli_dev.py  util.py
(+103 files in other folders)
